# danta

./: .env-sample  .gitignore  Cargo.toml  LICENSE  README.md
migrations/2022-07-11-140927_create_attendees/: down.sql  up.sql
src/: db.rs  excel.rs  lib.rs  lightning.rs  main.rs  models.rs  pdf.rs  routes.rs  schema.rs
src/lightning/: ln.rs  subscribe.rs
static/: organizers.json  speakers.json  sponsors.json  talks.json
static/css/: style.css
static/js/: check_user.js  main.js
templates/: attendees.html.hbs  check_user.html.hbs  index.html.hbs  main.html.hbs  verify_user.html.hbs
