[package]
name = "cacri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["sqlite", "chrono"]}
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_derive = "1.0.139"
serde_json = "1.0.82"
tonic_lnd = "0.4.0"
tokio = { version =  "1.20.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.9"
hex = "0.4.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]
