[package]
name = "danta"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Calderón <fjcalderon@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["sqlite", "chrono"]}
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_derive = "1.0.139"
serde_json = "1.0.82"
tonic_openssl_lnd = "0.1.4"
tokio = { version =  "1.20.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.9"
hex = "0.4.3"
genpdf = { version = "0.2.0", features = ["images"]}
qrcode = "0.12.0"
image = "0.23.14"
simple_excel_writer = "0.2.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]
